--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "server": "nodemon server.js",
     "server-install": "npm install",
     "dev": "npm run server ",
+    "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "heroku-postbuild": "npm install && npm run build"
   },
   "keywords": [],
