--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "server": "nodemon server.js",
     "server-install": "npm install",
     "dev": "npm run server ",
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm install && npm run dev"
   },
   "keywords": [],
   "author": "",
