--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "npm run server ",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run dev"
+    "heroku-postbuild": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
